#184: explore and define JDK, Spring Boot & Quarkus supported version floors jhntygh